force-app/main/default/objects/Transaction_History__c/Transaction_History__c.object-meta.xml
<CustomObject>
    <description>Primarily built for storing transaction history for financial accounts</description>
    <label>Transaction History</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Transaction No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>