force-app/main/default/objects/Transaction_History__c/fields/Merchant_ABN__c.field-meta.xml
<CustomField>
    <fullName>Merchant_ABN__c</fullName>
    <label>Merchant ABN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>