force-app/main/default/objects/Transaction_History__c/fields/Merchant_BSB__c.field-meta.xml
<CustomField>
    <fullName>Merchant_BSB__c</fullName>
    <label>Merchant BSB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>