force-app/main/default/objects/Transaction_History__c/fields/Transaction_Time__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Time__c</fullName>
    <label>Transaction Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>